# apollo-milp-ca-sc-data

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
configs/: dataset.yaml  medium.yaml  smoke.yaml
data/ca/bg/: manifest.csv
data/ca/bg/test/: ca_test_0000.pkl  ca_test_0001.pkl  ca_test_0002.pkl  ca_test_0003.pkl  ca_test_0004.pkl  ca_test_0005.pkl  ca_test_0006.pkl  ca_test_0007.pkl  ca_test_0008.pkl  ca_test_0009.pkl  ca_test_0010.pkl  ca_test_0011.pkl  ca_test_0012.pkl  ca_test_0013.pkl  ca_test_0014.pkl  ca_test_0015.pkl  ca_test_0016.pkl  ca_test_0017.pkl  ca_test_0018.pkl  ca_test_0019.pkl  ca_test_0020.pkl  ca_test_0021.pkl  ca_test_0022.pkl  ca_test_0023.pkl  ca_test_0024.pkl  ca_test_0025.pkl  ca_test_0026.pkl  ca_test_0027.pkl  ca_test_0028.pkl  ca_test_0029.pkl  ca_test_0030.pkl  ca_test_0031.pkl  ca_test_0032.pkl  ca_test_0033.pkl  ca_test_0034.pkl  ca_test_0035.pkl  ca_test_0036.pkl  ca_test_0037.pkl  ca_test_0038.pkl  ca_test_0039.pkl  (+60 more)
data/ca/solution_pool/: manifest.csv
metadata/: manifest.csv
outputs/gurobi/ca_final/: results.csv
scripts/: generate_ca_bg.py  generate_ca_solution_pool.py  solve_ca_batch.py  solve_ca_one.py
src/milp_dataset/: __init__.py  __main__.py  cli.py  config.py  generation.py  manifest.py  seeds.py  validation.py
tests/: test_generate_ca_bg.py  test_generate_ca_solution_pool.py  test_manifest.py  test_output_root_paths.py  test_parallel_generation.py  test_problem_filter.py  test_seeds.py  test_solve_ca_batch.py  test_solve_ca_one.py  test_solver_validation.py
(+1800 files in other folders)
