[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apollo-milp-ca-sc-data"
version = "0.1.0"
description = "Protocol-level reproduction tooling for Apollo-MILP CA and SC datasets."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
milp-dataset = "milp_dataset.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.hatch.build.targets.wheel]
packages = ["src/milp_dataset"]
